--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ fastapi>=0.104.0
 uvicorn>=0.23.2
 python-dotenv>=1.0.0
 pydantic>=2.4.2
+pydantic-settings>=2.0.0
 langchain>=0.0.335
 langchain-openai>=0.0.1
 openai>=1.3.0
 psycopg2-binary>=2.9.9
+asyncpg>=0.27.0
 pgvector>=0.2.3
 sqlalchemy>=2.0.23
 alembic>=1.12.1
