Updated django app for MCP authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,10 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT}
-      - MCP_SERVER_NAME=${MCP_SERVER_NAME}
-      - MCP_SERVER_HOST=${MCP_SERVER_HOST}
-      - MCP_SERVER_PORT=${MCP_SERVER_PORT}
-      - MCP_ISSUER_URL=${MCP_ISSUER_URL}
+      - MCP_SERVER_NAME=mcp
+      - MCP_SERVER_HOST=0.0.0.0
+      - MCP_SERVER_PORT=8000
+      - MCP_ISSUER_URL=http://localhost:8001
       - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
       - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
       - OAUTH_REDIRECT_URI=${OAUTH_REDIRECT_URI}
@@ -58,7 +58,8 @@ services:
     environment:
       - DEBUG=True
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
-      - MCP_SERVER_URL=http://app:8000
+      - MCP_SERVER_URL=http://localhost:8001
+      - MCP_SERVER_INTERNAL_URL=http://app:8000
       - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
       - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
       - OAUTH_REDIRECT_URI=http://localhost:8000/oauth/callback
