--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,12 @@ services:
     container_name: picard_mcp-db-mcp
     volumes:
       - postgres_data_mcp:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+    env_file:
+      - .env
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d picard_mcp"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -48,20 +46,11 @@ services:
     depends_on:
       db-mcp:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST=db-mcp
       - POSTGRES_PORT=5432
-      - MCP_SERVER_NAME=${MCP_SERVER_NAME}
-      - MCP_SERVER_HOST=${MCP_SERVER_HOST}
-      - MCP_SERVER_PORT=${MCP_SERVER_PORT}
-      - MCP_ISSUER_URL=${MCP_ISSUER_URL}
-      - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
-      - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
-      - OAUTH_REDIRECT_URI=${OAUTH_REDIRECT_URI}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   # Django client
@@ -77,20 +66,12 @@ services:
         condition: service_healthy
       mcp_server:
         condition: service_started
+    env_file:
+      - ./django_client/.env
     environment:
-      - DEBUG=True
-      - DJANGO_SECRET_KEY=django-insecure-key-for-development-only
-      - DB_NAME=django_client
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
       - DB_HOST=db-django
       - DB_PORT=5432
-      - MCP_SERVER_URL=http://localhost:8001
       - MCP_SERVER_INTERNAL_URL=http://mcp_server:8000
-      - OAUTH_CLIENT_ID=${OAUTH_CLIENT_ID}
-      - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
-      - OAUTH_REDIRECT_URI=http://localhost:8000/oauth/callback
-      - OAUTH_SCOPES=memories:read memories:write
     command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
