AI implemented phase 2, running some tests without modifications and hitting some errors

--- a/mcp_server/Dockerfile
+++ b/mcp_server/Dockerfile
@@ -15,6 +15,9 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Install test dependencies
+RUN pip install --no-cache-dir pytest pytest-asyncio pytest-cov
+
 # Copy application code
 COPY . .
 
