--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.3.0
 sqlalchemy==2.0.20
 alembic==1.12.0
 psycopg2-binary==2.9.7
+asyncpg==0.28.0
 python-jose==3.3.0
 passlib==1.7.4
 python-multipart==0.0.6
@@ -14,3 +15,4 @@ openai==0.28.0
 langchain==0.0.267
 cryptography==41.0.3
 pydantic-settings==2.0.3
+authlib==1.2.1
