--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.103.1
 uvicorn==0.23.2
 pydantic==2.3.0
+pydantic[email]==2.3.0
 sqlalchemy==2.0.20
 alembic==1.12.0
 psycopg2-binary==2.9.7
@@ -16,3 +17,11 @@ langchain==0.0.267
 cryptography==41.0.3
 pydantic-settings==2.0.3
 authlib==1.2.1
+email-validator==2.0.0
+httpx==0.24.1
+starlette-oauth2==0.1.0
+
+# Testing dependencies
+pytest==7.3.1
+pytest-asyncio==0.21.0
+pytest-cov==4.1.0
