--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -15,4 +15,8 @@ openai==0.28.0
 langchain==0.0.267
 cryptography==41.0.3
 pydantic-settings==2.0.3
-authlib==1.2.1
+authlib==1.2.0
+starlette-authlib==0.1.1
+httpx==0.24.1
+pytest==7.3.1
+pytest-asyncio==0.21.1
