--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -10,7 +10,8 @@ passlib==1.7.4
 python-multipart==0.0.6
 bcrypt==4.0.1
 python-dotenv==1.0.0
-pgvector==0.2.1
+pgvector==0.2.3
+sqlalchemy-utils==0.41.1
 openai==0.28.0
 langchain==0.0.267
 cryptography==41.0.3
@@ -18,5 +19,6 @@ pydantic-settings==2.0.3
 authlib==1.2.0
 starlette-authlib==0.1.1
 httpx==0.24.1
+email-validator==2.0.0
 pytest==7.3.1
 pytest-asyncio==0.21.1
