Passing tests for 2.1, should be complete. Updated documentation before starting 2.2

--- a/mcp_server/Dockerfile
+++ b/mcp_server/Dockerfile
@@ -29,6 +29,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Make the entrypoint script executable
+RUN chmod +x /app/scripts/entrypoint.sh
+
 # Change ownership of the application code
 RUN chown -R app:app /app
 
@@ -37,6 +40,9 @@ USER app
 
 # Expose port
 EXPOSE 8000
+
+# Set entrypoint
+ENTRYPOINT ["/app/scripts/entrypoint.sh"]
 
 # Command for different environments
 CMD if [ "$ENVIRONMENT" = "production" ]; then \
